--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
 			<nav class="navbar navbar-expand-lg">
 				<div class="container">
 					<!-- Logo Start -->
-					<a class="navbar-brand" href="home.html">
+					<a class="navbar-brand" href="index.html">
 						<img src="images/logo4.png" width="59" height="60" alt="Logo">
                         <span>Kazman and Kazman Group</span>
 					</a>
@@ -106,7 +106,7 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item"><a class="nav-link" href="home.html">Home</a>
+                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
                                 <li class="nav-item"><a class="nav-link" href="services.html">services</a></li>
@@ -140,7 +140,7 @@
 						<h1 class="text-anime-style-3" data-cursor="-opaque">About Us</h1>
 						<nav class="wow fadeInUp">
 							<ol class="breadcrumb">
-								<li class="breadcrumb-item"><a href="home.html">home</a></li>
+								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item active" aria-current="page">about us</li>
 							</ol>
 						</nav>
