--- a/services.html
+++ b/services.html
@@ -110,7 +110,7 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item"><a class="nav-link" href="home.html">Home</a>
+                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
                                 <li class="nav-item"><a class="nav-link" href="services.html">services</a></li>
@@ -138,7 +138,7 @@
 						<h1 class="text-anime-style-3" data-cursor="-opaque">Services</h1>
 						<nav class="wow fadeInUp">
 							<ol class="breadcrumb">
-								<li class="breadcrumb-item"><a href="home.html">home</a></li>
+								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item active" aria-current="page">services</li>
 							</ol>
 						</nav>
