--- a/about/index.html
+++ b/about/index.html
@@ -106,12 +106,12 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
-                                <li class="nav-item"><a class="nav-link" href="services.html">services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="projects.html">projects</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com">Home</a>
+                                </li>                                
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/about">about us</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/services">services</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/projects">projects</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/contact">Contact Us</a></li>
                                                         
                             </ul>
                         </div>
@@ -140,7 +140,7 @@
 						<h1 class="text-anime-style-3" data-cursor="-opaque">About Us</h1>
 						<nav class="wow fadeInUp">
 							<ol class="breadcrumb">
-								<li class="breadcrumb-item"><a href="index.html">home</a></li>
+								<li class="breadcrumb-item"><a href="https://www.kazmangroup.com">home</a></li>
 								<li class="breadcrumb-item active" aria-current="page">about us</li>
 							</ol>
 						</nav>
@@ -576,11 +576,13 @@
                     <!-- Footer Quick Links Start -->
                     <div class="footer-quick-links">
                         <h2>useful links</h2>
-                        <ul>                            
-                            <li><a href="about.html">about us</a></li>
-                            <li><a href="services.html">services</a></li>
-                            <li><a href="projects.html">projects</a></li>
-                            <li><a href="contact.html">contact us</a></li>
+                        <ul>   
+                            <li><a href="https://www.kazmangroup.com">Home</a>
+                        </li>                                
+                        <li><a href="https://www.kazmangroup.com/about">about us</a></li>
+                        <li><a href="https://www.kazmangroup.com/services">services</a></li>
+                        <li><a href="https://www.kazmangroup.com/projects">projects</a></li>
+                        <li><a href="https://www.kazmangroup.com/contact">Contact Us</a></li>
                         </ul>
                     </div>
                     <!-- Footer Quick Links End -->
