--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com">Home</a>
                                 </li>                                
-                                <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
-                                <li class="nav-item"><a class="nav-link" href="services.html">services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="projects.html">projects</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/about">about us</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/services">services</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/projects">projects</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/contact">Contact Us</a></li>
                                                         
                             </ul>
                         </div>
@@ -141,12 +141,12 @@
                             <h1 class="text-anime-style-3" data-cursor="-opaque">Driving Innovation in Mining, Agriculture, and Energy</h1>
                         </div>
                         <div class="hero-content-body wow fadeInUp" data-wow-delay="0.25s">
-                            <p>At Kazman and kazman group, We Empower businesses with multi-sector consultancy, responsible resource extraction, and innovative green energy solutions.</p>
+                            <p>We offer multi-sector consultancy, responsible resource extraction, and innovative green energy solutions.</p>
                         </div>
 
                         <div class="hero-content-footer wow fadeInUp" data-wow-delay="0.5s">
                             <!-- <a href="#" class="btn-default">get started</a> -->
-                            <a href="projects.html" class="btn-default btn-highlighted">view Projects</a>
+                            <a href="https://www.kazmangroup.com/projects" class="btn-default btn-highlighted">view Projects</a>
                         </div>
                     </div>
                     <!-- Hero Content End -->
@@ -172,7 +172,7 @@
                 <div class="col-lg-7">
                     <!-- Section Title Content Start -->
                     <div class="section-title-content wow fadeInUp" data-wow-delay="0.25s">
-                        <p>At Kazman & Kazman Limited, we are committed to building a sustainable future through innovative solutions in mining, agriculture, and green energy. Since our inception in 2021, we have become a trusted leader in responsible resource extraction, agric-business, and energy services.</p>
+                        <p>We are committed to building a sustainable future through innovative solutions in mining, agriculture, and green energy. Since our inception in 2021, we have become a trusted leader in responsible resource extraction, agric-business, and energy services.</p>
                     </div>
                     <!-- Section Title Content End -->
                 </div>
@@ -411,10 +411,12 @@
                     <div class="footer-quick-links">
                         <h2>useful links</h2>
                         <ul>                            
-                            <li><a href="about.html">about us</a></li>
-                            <li><a href="services.html">services</a></li>
-                            <li><a href="projects.html">projects</a></li>
-                            <li><a href="contact.html">contact us</a></li>
+                            <li><a href="https://www.kazmangroup.com">Home</a>
+                            </li>                                
+                            <li><a href="https://www.kazmangroup.com/about">about us</a></li>
+                            <li><a href="https://www.kazmangroup.com/services">services</a></li>
+                            <li><a href="https://www.kazmangroup.com/projects">projects</a></li>
+                            <li><a href="https://www.kazmangroup.com/contact">Contact Us</a></li>
                         </ul>
                     </div>
                     <!-- Footer Quick Links End -->
