--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 </li>                                
                                 <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/about">about us</a></li>
                                 <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/services">services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/projects">projects</a></li>
+                                <!-- <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/projects">projects</a></li> -->
                                 <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/contact">Contact Us</a></li>
                                                         
                             </ul>
@@ -146,7 +146,7 @@
 
                         <div class="hero-content-footer wow fadeInUp" data-wow-delay="0.5s">
                             <!-- <a href="#" class="btn-default">get started</a> -->
-                            <a href="https://www.kazmangroup.com/projects" class="btn-default btn-highlighted">view Projects</a>
+                            <a href="https://www.kazmangroup.com/services" class="btn-default btn-highlighted">view Services</a>
                         </div>
                     </div>
                     <!-- Hero Content End -->
@@ -164,7 +164,7 @@
                     <!-- Section Title Start -->
                     <div class="section-title">
                         <!-- <h3 class="wow fadeInUp">about us</h3> -->
-                        <h2 class="text-anime-style-3" data-cursor="-opaque">We are Your Partner in Sustainable Growth</h2>
+                        <h2 class="text-anime-style-3" data-cursor="-opaque">We Are Your Partner In Sustainable Growth</h2>
                     </div>
                     <!-- Section Title End -->
                 </div>
@@ -202,7 +202,7 @@
 
                         <!-- About Content Footer Start -->
                         <div class="about-content-footer wow fadeInUp" data-wow-delay="0.5s">
-                            <a href="about.html" class="btn-default">learn more about us</a>
+                            <a href="https://www.kazmangroup.com/about" class="btn-default">learn more about us</a>
                         </div>
                         <!-- About Content Footer End -->
                     </div>
@@ -212,9 +212,9 @@
                 <div class="col-lg-4">
                     <!-- About Image Start -->
                     <div class="about-image">
-                        <figure class="image-anime reveal">
+                        <!-- <figure class="image-anime reveal">
                             <img src="images/kasim.png" alt="">
-                        </figure>
+                        </figure> -->
                     </div>
                     <!-- About Image End -->
                 </div>
@@ -415,7 +415,7 @@
                             </li>                                
                             <li><a href="https://www.kazmangroup.com/about">about us</a></li>
                             <li><a href="https://www.kazmangroup.com/services">services</a></li>
-                            <li><a href="https://www.kazmangroup.com/projects">projects</a></li>
+                            <!-- <li><a href="https://www.kazmangroup.com/projects">projects</a></li> -->
                             <li><a href="https://www.kazmangroup.com/contact">Contact Us</a></li>
                         </ul>
                     </div>
