--- a/about/index.html
+++ b/about/index.html
@@ -241,7 +241,7 @@
 
                             <!-- About Story Button Start -->
                             <div class="about-story-btn wow fadeInUp" data-wow-delay="1s">
-                                <a href="contact.html" class="btn-default">Contact us</a>
+                                <a href="https://www.kazmangroup.com/contact" class="btn-default">Contact us</a>
                             </div>
                             <!-- About Story Button End -->
                         </div>
@@ -623,7 +623,7 @@
                                     <i class="fa-solid fa-location-dot"></i>
                                 </div>
                                 <!-- Icon Box End -->
-                                <p>no 64 Mambolo street wuse zone 2, Abuja. </p>
+                                <p>No 64 Mambolo Street Wuse Zone 2, Abuja. </p>
                             </div>
                             <!-- Info Box End -->
                         </div>
