--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
                         <!-- Why Choose Content Footer Start -->
                         <div class="why-choose-content-footer wow fadeInUp" data-wow-delay="0.5s">
-                            <a href="services.html" class="btn-default">learn more about our services</a>
+                            <a href="https://www.kazmangroup.com/services" class="btn-default">learn more about our services</a>
                         </div>
                         <!-- Why Choose Content Footer End -->
                     </div>
@@ -381,6 +381,7 @@
                         <div class="footer-logo">
                             <figure>
                                 <img src="images/logo3.png" alt="Logo">
+                                <p style="   margin-top: 10px; font-size: 20px; font-weight: bold;">RC1755768</p>
                             </figure>
                         </div>
                         <!-- Footer Logo End -->
@@ -457,7 +458,7 @@
                                     <i class="fa-solid fa-location-dot"></i>
                                 </div>
                                 <!-- Icon Box End -->
-                                <p>no 64 Mambolo street wuse zone 2, Abuja. </p>
+                                <p>No 64 Mambolo Street Wuse Zone 2, Abuja. </p>
                             </div>
                             <!-- Info Box End -->
                         </div>
