--- a/services/index.html
+++ b/services/index.html
@@ -163,7 +163,7 @@
                         </div>
                         <div class="service-body">
                             <h3>green energy</h3>
-                            <p> solar energy installation, energy audits, and innovative energy-saving technologies designed to reduce environmental impact.</p>
+                            <p> Solar energy installation, energy audits, and innovative energy-saving technologies designed to reduce environmental impact.</p>
                         </div>
                     </div>
                     <!-- Services Item End -->
@@ -177,7 +177,7 @@
                         </div>
                         <div class="service-body">
                             <h3>Mining</h3>
-                            <p>high-quality extraction of minerals while maintaining strict environmental safeguards. </p>
+                            <p>High-quality extraction of minerals while maintaining strict environmental safeguards. </p>
                         </div>
                     </div>
                     <!-- Services Item End -->
@@ -191,7 +191,7 @@
                         </div>
                         <div class="service-body">
                             <h3>Agriculture</h3>
-                            <p> we specialize in sustainable agricultural practices, integrating agric-tech innovations to improve yield and production.</p>
+                            <p> We specialize in sustainable agricultural practices, integrating agric-tech innovations to improve yield and production.</p>
                         </div>
                     </div>
                     <!-- Services Item End -->
@@ -205,7 +205,7 @@
                         </div>
                         <div class="service-body">
                             <h3>Oil and gas</h3>
-                            <p> we provide expert services in the oil and gas sector, focusing on the exploration, extraction, and distribution of petroleum resources.</p>
+                            <p> We provide expert services in the oil and gas sector, focusing on the exploration, extraction, and distribution of petroleum resources.</p>
                         </div>
                     </div>
                     <!-- Services Item End -->
@@ -219,7 +219,7 @@
                         </div>
                         <div class="service-body">
                             <h3>Import and export</h3>
-                            <p>we facilitate seamless import and export services, helping businesses source materials and distribute products across borders efficiently.</p>
+                            <p>We facilitate seamless import and export services, helping businesses source materials and distribute products across borders efficiently.</p>
                         </div>
                     </div>
                     <!-- Services Item End -->
@@ -265,7 +265,7 @@
 
                         <!-- Cta Content Footer Start -->
                         <div class="cta-content-footer wow fadeInUp" data-wow-delay="0.5s">
-                            <a href="contact.html" class="btn-default">Contact us</a>
+                            <a href="https://www.kazmangroup.com/contact" class="btn-default">Contact us</a>
                         </div>
                         <!-- Cta Content Footer End -->
                     </div>
@@ -363,7 +363,7 @@
                                     <i class="fa-solid fa-location-dot"></i>
                                 </div>
                                 <!-- Icon Box End -->
-                                <p>no 64 Mambolo street wuse zone 2, Abuja. </p>
+                                <p>No 64 Mambolo Street Wuse Zone 2, Abuja. </p>
                             </div>
                             <!-- Info Box End -->
                         </div>
