--- a/contact/index.html
+++ b/contact/index.html
@@ -395,7 +395,7 @@
                                     <i class="fa-solid fa-location-dot"></i>
                                 </div>
                                 <!-- Icon Box End -->
-                                <p>no 64 Mambolo street wuse zone 2, Abuja. </p>
+                                <p>No 64 Mambolo Street Wuse Zone 2, Abuja. </p>
                             </div>
                             <!-- Info Box End -->
                         </div>
