--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Page Title -->
-	<title>Kazman and Kazman Group</title>
+	<title>Kazman & Kazman Group</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/logo5.png">
 	<!-- Google Fonts Css-->
@@ -98,7 +98,7 @@
 					<!-- Logo Start -->
 					<a class="navbar-brand" href="index.html">
 						<img src="images/logo4.png" width="59" height="60" alt="Logo">
-                        <span>Kazman and Kazman Group</span>
+                        <span>Kazman & Kazman Group</span>
 					</a>
 					<!-- Logo End -->
 
