--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Page Title -->
-	<title>Kazman and Kazman Group</title>
+	<title>Kazman & Kazman Group</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/logo5.png">
 	<!-- Google Fonts Css-->
@@ -97,7 +97,7 @@
 					<!-- Logo Start -->
 					<a class="navbar-brand" href="index-2.html">
 						<img src="images/logo4.png" width="59" height="60" alt="Logo">
-                        <span>Kazman and Kazman Group</span>
+                        <span>Kazman & Kazman Group</span>
 					</a>
 					<!-- Logo End -->
 
@@ -137,7 +137,7 @@
                     <!-- Hero Content Start -->
                     <div class="hero-content">
                         <div class="hero-content-title">
-                            <!-- <h3 style="font-size: 20px;" class="wow fadeInUp">welcome to kazman and kazman group</h3> -->
+                            <!-- <h3 style="font-size: 20px;" class="wow fadeInUp">welcome to Kazman & Kazman group</h3> -->
                             <h1 class="text-anime-style-3" data-cursor="-opaque">Driving Innovation in Mining, Agriculture, and Energy</h1>
                         </div>
                         <div class="hero-content-body wow fadeInUp" data-wow-delay="0.25s">
@@ -285,13 +285,13 @@
                         <!-- Section Title Start -->
                         <div class="section-title">
                             <h3 class="wow fadeInUp">why choose us</h3>
-                            <h2 class="text-anime-style-3" data-cursor="-opaque">A positive impact for your home and the planet</h2>
+                            <h2 class="text-anime-style-3" data-cursor="-opaque">For Positive Impact For Your Home And Our Planet</h2>
                         </div>
                         <!-- Section Title End -->
 
                         <!-- Why Choose Content Body Start -->
                         <div class="why-choose-content-body wow fadeInUp" data-wow-delay="0.25s">
-                            <p>By emphasizing sustainability and innovation across industries, Kazman & Kazman Limited is positioned as a leader in shaping a greener future for Nigeria and beyond.</p>
+                            <p>By emphasizing sustainability and innovation across industries, Kazman & Kazman is positioned as a leader in shaping a greener future for Nigeria and beyond.</p>
                         </div>
                         <!-- Why Choose Content Body End -->
 
