--- a/services/index.html
+++ b/services/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
-	<title>Kazim and Kazim Group</title>
+	<title>Kazman & Kazman Group</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/logo5.png">
 	<!-- Google Fonts Css-->
@@ -102,7 +102,7 @@
 					<!-- Logo Start -->
 					<a class="navbar-brand" href="index-2.html">
                         <img src="images/logo4.png" width="59" height="60" alt="Logo">
-                        <span>Kazman and Kazman Group</span>
+                        <span>Kazman & Kazman Group</span>
 					</a>
 					<!-- Logo End -->
 
