--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <!-- Section Title Start -->
                         <div class="section-title">
                             <h3 class="wow fadeInUp">why choose us</h3>
-                            <h2 class="text-anime-style-3" data-cursor="-opaque">For Positive Impact For Your Home And Our Planet</h2>
+                            <h2 class="text-anime-style-3" data-cursor="-opaque">Positive Impact For Your Home And Our Planet</h2>
                         </div>
                         <!-- Section Title End -->
 
