--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="topbar-contact-info">
                         <ul>
                             <li><a href="#"><i class="fa-solid fa-phone"></i> +234 809-900-0765</a></li>
-                            <li><a href="#"><i class="fa-regular fa-envelope"></i> o.abdulkadirkasim@gmail.com</a></li>
+                            <li><a href="#"><i class="fa-regular fa-envelope"></i> info@kazmangroup.com</a></li>
                         </ul>
                     </div>
                     <!-- Topbar Contact Information End -->
@@ -447,7 +447,7 @@
                                     <i class="fa-solid fa-envelope-open-text"></i>
                                 </div>
                                 <!-- Icon Box End -->
-                                <p> o.abdulkadirkasim@gmail.com</p>
+                                <p> info@kazmangroup.com</p>
                             </div>
                             <!-- Info Box End -->
 
