--- a/contact/index.html
+++ b/contact/index.html
@@ -183,7 +183,7 @@
                                         <i class="fa-solid fa-location-dot"></i>
                                     </div>
                                     <!-- Icon Box End -->
-                                    <p>no 64 Mambolo street wuse zone 2, Abuja. </p>
+                                    <p>No 64 Mambolo street Wuse Zone 2, Abuja. </p>
                                 </div>
                                 <!-- Contact Info Item End -->
                     
