--- a/about/index.html
+++ b/about/index.html
@@ -110,7 +110,7 @@
                                 </li>                                
                                 <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/about">about us</a></li>
                                 <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/services">services</a></li>
-                                <!-- <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/projects">projects</a></li> -->
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/projects">projects</a></li>
                                 <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/contact">Contact Us</a></li>
                                                         
                             </ul>
@@ -581,7 +581,7 @@
                         </li>                                
                         <li><a href="https://www.kazmangroup.com/about">about us</a></li>
                         <li><a href="https://www.kazmangroup.com/services">services</a></li>
-                        <!-- <li><a href="https://www.kazmangroup.com/projects">projects</a></li> -->
+                        <li><a href="https://www.kazmangroup.com/projects">projects</a></li>
                         <li><a href="https://www.kazmangroup.com/contact">Contact Us</a></li>
                         </ul>
                     </div>
