--- a/contact/index.html
+++ b/contact/index.html
@@ -112,7 +112,7 @@
                                 </li>                                
                                 <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/about">about us</a></li>
                                 <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/services">services</a></li>
-                                <!-- <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/projects">projects</a></li> -->
+                                <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/projects">projects</a></li>
                                 <li class="nav-item"><a class="nav-link" href="https://www.kazmangroup.com/contact">Contact Us</a></li>
                                                         
                             </ul>                           
@@ -353,7 +353,7 @@
                             </li>                                
                             <li><a href="https://www.kazmangroup.com/about">about us</a></li>
                             <li><a href="https://www.kazmangroup.com/services">services</a></li>
-                            <!-- <li><a href="https://www.kazmangroup.com/projects">projects</a></li> -->
+                            <li><a href="https://www.kazmangroup.com/projects">projects</a></li>
                             <li><a href="https://www.kazmangroup.com/contact">Contact Us</a></li>
                         </ul>
                     </div>
